--- a/Source/Tailwind.Traders.Web/appsettings.Development.json
+++ b/Source/Tailwind.Traders.Web/appsettings.Development.json
@@ -11,6 +11,6 @@
   "ApplicationInsights": {
     "InstrumentationKey": "9e4916b2-4fe3-4fce-9bed-ed0f3883ef40"
   },
-  "ApiUrl": "http://localhost:5200/v1",
-  "ApiUrlShoppingCart": "http://localhost:3000"
+  "ApiUrl": "https://b8171757415247dc9da0.southeastasia.aksapp.io/v1",
+  "ApiUrlShoppingCart": "https://b8171757415247dc9da0.southeastasia.aksapp.io"
 }
